--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,5 +7,11 @@ jobs:
     working_directory: /go/src/github.com/satta/gommunityid
     steps:
       - checkout
+      - run:
+          name: Add stretch-backports
+          command: 'echo "deb http://ftp.debian.org/debian stretch-backports main" | sudo tee -a /etc/apt/sources.list.d/backports.list'
+      - run:
+          name: Install apt dependencies
+          command: 'sudo apt-get update && sudo apt-get -t stretch-backports install libpcap0.8-dev -y'
       - run: go get -v -t -d ./...
       - run: go test -v ./...
