add coveralls support

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,4 +14,7 @@ jobs:
           name: Install apt dependencies
           command: 'sudo apt-get update && sudo apt-get -t stretch-backports install libpcap0.8-dev -y'
       - run: go get -v -t -d ./...
-      - run: go test -v ./...
+      - run: go get golang.org/x/tools/cmd/cover
+      - run: go get github.com/mattn/goveralls
+      - run: go test -v -covermode=count -coverprofile=coverage.out ./...
+      - run: goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
