--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,4 +17,4 @@ jobs:
       - run: go get golang.org/x/tools/cmd/cover
       - run: go get github.com/mattn/goveralls
       - run: go test -v -covermode=count -coverprofile=coverage.out ./...
-      - run: goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
+      - run: goveralls -coverprofile=coverage.out -service=circle-ci -repotoken $COVERALLS_TOKEN
