use newer golang image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.12-stretch
+      - image: cimg/go:1.14
 
     working_directory: /go/src/github.com/satta/gommunityid
     steps:
