--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,4 +38,6 @@ jobs:
       run: go test -v -covermode=count -coverprofile=coverage.out ./...
 
     - name: Coveralls
+      env:
+        COVERALLS_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
       run: goveralls -coverprofile=coverage.out -service=circle-ci -repotoken $COVERALLS_TOKEN
